--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Template"
+      name="Bookpinion"
+      content="Web resource about books and opinions"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <title>React App</title>
+    <title>Bookpinion</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
